--- a/README
+++ b/README
@@ -122,6 +122,11 @@ local file_idx = zip_arc:name_locate(filename [, flags])
 
     If it is not found, it returns nil plus an error message.
 
+######################################################################
+TODO: The following functions are not implemented yet:
+######################################################################
+
+
 local file = zip_arc:open(filename | file_idx [, flags])
 
     Returns a new file handle for the specified filename or file
