--- a/README
+++ b/README
@@ -196,17 +196,17 @@ zip_arc:set_archive_comment(comment)
     Sets the comment of an archive.  May throw an error if the comment
     exceeds 65,535 bytes.
 
-######################################################################
-TODO: The following functions are not implemented yet:
-######################################################################
-
-local comment = zip_arc:get_file_comment(filename | file_idx [, flags])
+local comment = zip_arc:get_file_comment(file_idx [, flags])
 
     Return any comment about the specified file.  The only valid flag
     is:
 
         zip.FL_UNCHANGED
             See zip_arc:open().
+
+######################################################################
+TODO: The following functions are not implemented yet:
+######################################################################
 
 zip_arc:set_file_comment(filename | file_idx, comment)
 
