Place the zip library under the brimworks namespace.

--- a/README
+++ b/README
@@ -34,11 +34,11 @@ To build this library, you need CMake, get it here:
 Loading the library:
 
     If you built the library as a loadable package
-        [local] zip = require 'zip'
+        [local] zip = require 'brimworks.zip'
 
     If you compiled the package statically into your application, call
-    the function "luaopen_zip(L)". It will create a table with the
-    zip functions and leave it on the stack.
+    the function "luaopen_brimworks_zip(L)". It will create a table
+    with the zip functions and leave it on the stack.
 
 Note:
 
@@ -47,6 +47,13 @@ Note:
     lua-archive.  However, libarchive is currently not compatible with
     "office open xml", and therefore the author was motivated to write
     this zip specific binding.
+
+Why brimworks prefix?
+
+    When this module was created, there was already a binding to
+    zziplib named "zip" and since the author owns the brimworks.com
+    domain he felt prefixing with brimworks would avoid in collisions
+    in case people need to use the zziplib binding at the same time.
 
 -- zip functions --
 
